# video-pipeline

./: .gitignore  LICENSE  README.md  brainstorm.md  main.py  pyproject.toml
docs/: brainstorm.md
pipeline/: downloader.py  factory.py  io_loader.py  summarizer.py  transcriber.py  types.py  utils.py
