[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "video-pipeline"
version = "0.1.0"
description = "Download, transcribe, and summarize videos via CLI."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "video-pipeline contributors" }]
dependencies = []

[project.scripts]
video-pipeline = "main:main"

[tool.setuptools]
packages = ["pipeline"]
py-modules = ["main"]
